--- a/gui/src/components/update/Modal/modal.css
+++ b/gui/src/components/update/Modal/modal.css
@@ -9,6 +9,9 @@
     top: 0;
     z-index: 9;
     background: rgba(0, 0, 0, 0.45);
+    border: 0;
+    padding: 0;
+    margin: 0;
   }
 
   .update-modal__warp {
@@ -43,6 +46,9 @@
       line-height: 34px;
       text-align: center;
       cursor: pointer;
+      border: 0;
+      background: transparent;
+      color: inherit;
 
       svg {
         width: 17px;
